# dumb_alloc

./: CMakeLists.txt  LICENSE  README.md
examples/no_std_builtin_example/: CMakeLists.txt  fake_libc.c  fake_libc.h  main.c  syscall.s
examples/no_std_example/: CMakeLists.txt  main.c
src/: alloc.c  alloc.h
tests/: CMakeLists.txt
tests/src/: tests.cpp
